<resources>
    <string name="app_name">Libros App</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="digite_contrasena">Digite Contraseña</string>
    <string name="rep_password">Repita la contraseña</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="generos_literarios">Géneros literarios favoritos</string>
    <string name="accion">Acción</string>
    <string name="aventura">Aventura</string>
    <string name="fantasia">Fantasia</string>
    <string name="romance">Romance</string>
    <string name="suspenso">Suspenso</string>
    <string name="terror">Terror</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_mis_libros">Mis libros</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_libreria">Libreria</string>
    <string name="title_perfil">Mi perfil</string>
    <string name="nuevo_libro">Nuevo libro</string>
    <string name="nombre_libro">Nombre del libro</string>
    <string name="autor_libro">Autor</string>
    <string name="paginas">Número de páginas</string>
    <string name="generos_literarios_libro">Genero literario</string>
    <string name="guardar_libro">Guardar libro</string>
    <string name="ejemplo_nombre">El sicoanalista</string>
    <string name="ejemplo_puntaje">5.0</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ejemplo_autor">John Katzenbach</string>
    <string name="ejemplo_nombre_usuario">John Doe</string>
    <string name="ejemplo_correo">john_doe@gmail.com</string>
    <string name="ejemplo_genero">Género: Masculino</string>
    <string name="ejemplo_generos_favoritos">Suspenso Terror</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ejemplo_nombre_tienda">Libreria Nacional</string>
    <string name="ejemplo_horario">Lunes a Viernes 7:00 a 5:00</string>
    <string name="title_tiendas">Tiendas</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ejemplo_direccion">Av. El Poblado #6 Sur 15 Local 3288, El Poblado, Medellín, El Poblado, Medellín, Antioquia</string>
    <string name="ejemplo_telefono">64578451</string>
    <string name="ejemplo_resena">Reseña: 5.0</string>
    <string name="title_detalle_tienda">Datos de la tienda</string>
    <string name="title_maps">Mapa</string>
</resources>